// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds follow views fetches followers 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-eve",
      "did": "user(2)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(1)",
        "following": "record(0)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-dan",
      "did": "user(4)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "description": "descript-bob",
      "did": "user(6)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(9)/cids(0)@jpeg",
      "description": "descript-carol",
      "did": "user(8)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(7)",
        "following": "record(6)",
      },
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-alice",
    "did": "user(0)",
    "displayName": "display-alice",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
}
`;

exports[`pds follow views fetches followers 2`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-dan",
      "did": "user(2)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(4)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-bob",
    "did": "user(0)",
    "displayName": "display-bob",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches followers 3`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-eve",
      "did": "user(2)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-bob",
      "did": "user(4)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(6)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-carol",
    "did": "user(0)",
    "displayName": "display-carol",
    "handle": "carol.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches followers 4`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(2)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-dan",
    "did": "user(0)",
    "displayName": "display-dan",
    "handle": "dan.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches followers 5`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "followers": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-dan",
      "did": "user(2)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(4)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-eve",
    "did": "user(0)",
    "displayName": "display-eve",
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-eve",
      "did": "user(2)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(1)",
        "following": "record(0)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-dan",
      "did": "user(4)",
      "displayName": "display-dan",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "description": "descript-carol",
      "did": "user(6)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(9)/cids(0)@jpeg",
      "description": "descript-bob",
      "did": "user(8)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(7)",
        "following": "record(6)",
      },
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-alice",
    "did": "user(0)",
    "displayName": "display-alice",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {},
  },
}
`;

exports[`pds follow views fetches follows 2`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-carol",
      "did": "user(2)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(4)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-bob",
    "did": "user(0)",
    "displayName": "display-bob",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 3`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(2)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-carol",
    "did": "user(0)",
    "displayName": "display-carol",
    "handle": "carol.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 4`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-eve",
      "did": "user(2)",
      "displayName": "display-eve",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-bob",
      "did": "user(4)",
      "displayName": "display-bob",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(7)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(6)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-dan",
    "did": "user(0)",
    "displayName": "display-dan",
    "handle": "dan.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;

exports[`pds follow views fetches follows 5`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "follows": Array [
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
      "description": "descript-carol",
      "did": "user(2)",
      "displayName": "display-carol",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(3)",
        "following": "record(2)",
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(5)/cids(0)@jpeg",
      "description": "descript-alice",
      "did": "user(4)",
      "displayName": "display-alice",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {},
    },
  ],
  "subject": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "description": "descript-eve",
    "did": "user(0)",
    "displayName": "display-eve",
    "handle": "eve.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
}
`;
